--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,8 +7,23 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="TEST" HorizontalAlignment="Left" Margin="256,97,0,0" VerticalAlignment="Top" Width="305" Height="124" />
-        <TextBox Name="TEXT" HorizontalAlignment="Left" Height="142" Margin="81,221,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="263"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="78*"/>
+            <RowDefinition Height="270*"/>
+            <RowDefinition/>
 
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+
+            <ColumnDefinition Width="317*"/>
+            <ColumnDefinition Width="42*"/>
+            <ColumnDefinition Width="38*"/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid Name="DangerDataGrid" IsReadOnly="True" Grid.RowSpan="3" Margin="0,0,9.6,0.2" MouseDoubleClick="ShowDangerDetailInfo" />
+        <Button Name="UpdateButton" Content="Обновить" Grid.ColumnSpan="2" Margin="10.4,10,21.6,4.4" Grid.Column="1" Click="Button_Click"/>
+        <Button Name="SaveButton" Content="Сохранить" Grid.ColumnSpan="2" Margin="10.4,20.6,21.6,2.8" Grid.Column="1" Grid.Row="1"/>
     </Grid>
 </Window>
