--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -23,7 +23,7 @@
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
         <DataGrid Name="DangerDataGrid" IsReadOnly="True" Grid.RowSpan="3" Margin="0,0,9.6,0.2" MouseDoubleClick="ShowDangerDetailInfo" />
-        <Button Name="UpdateButton" Content="Обновить" Grid.ColumnSpan="2" Margin="10.4,10,21.6,4.4" Grid.Column="1" Click="Button_Click"/>
-        <Button Name="SaveButton" Content="Сохранить" Grid.ColumnSpan="2" Margin="10.4,20.6,21.6,2.8" Grid.Column="1" Grid.Row="1"/>
+        <Button Name="UpdateButton" Content="Обновить" Grid.ColumnSpan="2" Margin="10.4,10,21.6,4.4" Grid.Column="1" Click="Update"/>
+        <Button Name="SaveButton" Content="Сохранить" Grid.ColumnSpan="2" Margin="10.4,20.6,21.6,2.8" Grid.Column="1" Grid.Row="1" Click="SafeFile"/>
     </Grid>
 </Window>
