--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,14 +44,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/upload_file"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
+
+        app:layout_constraintBottom_toTopOf="@+id/sourceEitText"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/formatTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextKey"
+        app:layout_constraintVertical_bias="0.563" />
 
     <RadioGroup
         android:id="@+id/formatRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/sourceEitText"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
@@ -115,24 +118,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/sourceEitText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/formatTextView" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toStartOf="@+id/formatTextView"
+        app:layout_constraintHorizontal_bias="0.314"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextKey"
-        app:layout_constraintVertical_bias="0.443" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextKey" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
